[gd_scene load_steps=3 format=3 uid="uid://bi3rnksxu7aks"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_0ld4l"]
[ext_resource type="LabelSettings" uid="uid://bwv805po0qxr6" path="res://scenes/ui/settings/simple_label.tres" id="2_pn68t"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0ld4l")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 213.0
offset_bottom = 115.0
text = "0
"
label_settings = ExtResource("2_pn68t")

[node name="ClockLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 48.0
offset_right = 1159.0
offset_bottom = 115.0
text = "00:00.0"
label_settings = ExtResource("2_pn68t")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 1016.0
offset_top = 528.0
offset_right = 1088.0
offset_bottom = 624.0

[node name="ToolSprite" type="Sprite2D" parent="CenterContainer"]
position = Vector2(36, 44)
scale = Vector2(5.5, 6.5)
